--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -152,6 +152,10 @@ a.button span {
   padding-left: 20px;
 }
 
+#download-pdf a.button{
+	width: 170px;
+}
+
 #download-zip span {
   background: transparent url(../images/zip-icon.png) 12px 50% no-repeat;
 }
