--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -105,7 +105,6 @@ header h2 {
 a.button {
   display: block;
   float: left;
-  width: 150px;
   padding: 12px 8px 12px 8px;
   margin-right: 14px;
   font-size: 15px;
@@ -149,11 +148,8 @@ a.button:hover {
 a.button span {
   display: block;
   height: 23px;
-  padding-left: 20px;
-}
-
-#download-pdf a.button{
-	width: 170px;
+  padding-left: 10px;
+	padding-right: 10px;
 }
 
 #download-zip span {
