--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -57,10 +57,10 @@ body {
 }
 
 a {
-  color: #d5000d;
+  color: rgb(46,49,149);
 }
 a:hover {
-  color: #c5000c;
+  color: rgb(49,49,100);
 }
 
 header {
@@ -82,6 +82,11 @@ header h2 {
   line-height: 1.3;
   color: #aaa;
   letter-spacing: -1px;
+}
+
+header h4 {
+  color: #aaa;
+	font-weight: normal;
 }
 
 #container {
@@ -106,7 +111,8 @@ a.button {
   display: block;
   float: left;
   padding: 12px 8px 12px 8px;
-  margin-right: 14px;
+  margin-right: 25px;
+	margin-left: 25px;
   font-size: 15px;
   font-weight: bold;
   line-height: 25px;
@@ -255,7 +261,7 @@ h3 {
   margin-bottom: 8px;
   font-size: 18px;
   font-weight: bold;
-  color: #d5000d;
+  color: rgb(46,49,149);
 }
 
 h4 {
